fixed clipping

--- a/addons/iconTabs.css
+++ b/addons/iconTabs.css
@@ -28,11 +28,15 @@
 }
 
 .privateChannels-1nO12o .channel-2QD9_O:not([style="height: 42px; opacity: 1;"]) a .name-2WpE7M {
-    display: none;
+  display: none;
+}
+
+.privateChannels-1nO12o .channel-2QD9_O .linkButtonIcon-Mlm5d6 {
+  margin: 0;
 }
 
 .privateChannels-1nO12o .channel-2QD9_O a svg[name*="Library"] ~ span {
-    position: absolute;
-    top: -10px;
-    right: -15px;
+  position: absolute;
+  top: -10px;
+  right: -15px;
 }
